# IMSI-Lecture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_config.h  test2D.cpp
Elements/: LagrangeElement.cpp  LagrangeElement.h  fe1DP1.cpp  fe1DP1.h  fe1DQ2.cpp  fe1DQ2.h  fe2DP1.cpp  fe2DP1.h  fe2DP2.cpp  fe2DP2.h  fe2DQ1.cpp  fe2DQ1.h  fe2DQ2.cpp  fe2DQ2.h  fe3DP1.cpp  fe3DP1.h  fe3DP2.cpp  fe3DP2.h  fe3DQ1.cpp  fe3DQ1.h  fe3DQ2.cpp  fe3DQ2.h
Geometry/: BarUniformMeshQ1.cpp  BarUniformMeshQ1.h  BarUniformMeshQ2.cpp  BarUniformMeshQ2.h  BrickUniformMeshQ1.cpp  BrickUniformMeshQ1.h  BrickUniformMeshQ2.cpp  BrickUniformMeshQ2.h  Domain.cpp  Domain.h  Edge.cpp  Edge.h  GeometricDomain.cpp  GeometricDomain.h  GeometricElement.h  Hexahedron.cpp  Hexahedron.h  Mesh.cpp  Mesh.h  Partition.cpp  Partition.h  Quadrilateral.cpp  Quadrilateral.h  RectangleUniformMeshQ1.cpp  RectangleUniformMeshQ1.h  RectangleUniformMeshQ2.cpp  RectangleUniformMeshQ2.h  Rectangle_Domain.cpp  Rectangle_Domain.h  SimpleGeometry.cpp  SimpleGeometry.h  T_GeometricElement.hpp  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Math/: BlockVector.hpp  Connectivity.h  DenseMatrix.cpp  DenseMatrix.hpp  FortranRoutines.cpp  FortranRoutines.h  Isomorphism.hpp  MathCXXCore.cpp  MathCXXCore.hpp  Matrix.hpp  Morphism.hpp  TridiagonalMatrix.hpp
Problems/: ProblemDescriptor.cpp  ProblemDescriptor.h
TPL/: CMakeLists.txt
TPL/Vc/: CMakeLists.txt
TPL/Vc/Vc/: version.h
TPL/Vc/doc/: Doxyfile
TPL/kokkos-kernels/: CMakeLists.txt
TPL/kokkos-kernels/cmake/Modules/: FindTPLBLAS.cmake  FindTPLLAPACK.cmake
TPL/tacho/: CMakeLists.txt
TPL/tacho/example/: CMakeLists.txt  Tacho_ExampleDriver_float.cpp
TPL/tacho/src/: CMakeLists.txt  Tacho_CrsMatrixBase.hpp
TPL/tacho/src/impl/: Tacho_GraphTools_Metis.cpp  Tacho_GraphTools_Metis.hpp
Utilities/: Span.h
cmake/: FindMETIS.cmake  FindMKL.cmake
examples/: CMakeLists.txt  Laplace1D.cpp  Laplace2D9pt.cpp  Laplace2DQ1.cpp  cuda_assembly.cpp  simdPolar.cpp  team_policy_solution.cpp
src/: CMakeLists.txt  Element.h  FunctionExamples.h  MathUtils.h  MathUtilsCuda.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  QuadratureRule.cpp  QuadratureRule.h  ScaledLaplacian.h  ScaledLaplacianCuda.h  SparseMatrix.hpp  SymmetricSparse.hpp  Utils.cpp  Utils.h  assmb.f  betree.f  bfinit.f  blkl2.f  blkldl.f  blkns.f  blkslv.f  blkslvn.f  btree2.f  chordr.f  dgecp.f  dgers.f  dpotf2_ldl.f  dpotrf_ldl.f  epost2.f  etordr.f  etpost.f  etree.f  fcnthn.f  fe1DQ1.h  fe1DQ2.h  fe2DQ1.h  fe2DQ1Cuda.h  (+51 more)
tacho/src/: CMakeLists.txt
